--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "homepage": "https://github.com/react-ga/react-ga",
   "peerDependencies": {
     "prop-types": "^15.6.0",
-    "react": "^15.6.2 || ^16.0 || ^17 || ^18"
+    "react": "^15.6.2 || ^16.0 || ^17 || ^18 || ^19"
   },
   "devDependencies": {
     "@babel/cli": "7.17.10",
